--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,7 +4,7 @@
 }
 
 .maxWidthWrapper {
-  /* position: relative; */
+  position: relative;
 }
 
 .header {
@@ -29,7 +29,7 @@
   position: fixed;
   top: 128px;
   right: 0;
-  min-height: 500px;
+  height: 900px;
 }
 
 .controlColumn {
